Fix notification popover paddings, spacings

--- a/app/components/layout/NotificationPopover.module.css
+++ b/app/components/layout/NotificationPopover.module.css
@@ -19,20 +19,21 @@
 .topContainer {
 	display: flex;
 	justify-content: space-between;
+	align-items: center;
+	padding-inline: var(--s-3);
+	padding-block: var(--s-1);
 }
 
 .header {
 	display: flex;
 	align-items: center;
 	font-size: var(--font-sm);
-	padding-inline: var(--s-1);
-	padding-bottom: var(--s-1);
 	gap: var(--s-1);
 }
 
-.refreshButton {
-	margin-block-end: var(--s-1);
-	margin-inline-end: var(--s-1);
+.refreshButton svg {
+	width: 14px;
+	height: 14px;
 }
 
 .noNotifications {
